--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,31 +3,42 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
+    android:background="@android:color/white"
     android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tvMainTitle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:background="@color/colorPrimary"
-            tools:text="Hola Mundo, curso de interface" />
-    <TextView
-        android:layout_width="match_parent"
+
+    <ImageView
+        android:layout_gravity="center"
+        android:layout_width="160dp"
         android:layout_height="120dp"
-        android:textSize="40sp"
-        tools:background="@color/red"
-        tools:text="Hola Mundo, curso de interface" />
-        <EditText
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:background="@color/colorPrimary"
-        tools:text="Hola Mundo, curso de interface" />
+        android:src="@drawable/logo"/>
     <EditText
-            android:background="@color/colorPrimaryDark"
-            android:inputType="number"
-            android:hint="Escribe tu nombre"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+        android:layout_margin="12dp"
+        android:drawablePadding="12dp"
+        android:drawableLeft="@drawable/vector_person"
+        android:hint="@string/hint_usuario"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <EditText
+        android:layout_margin="12dp"
+        android:drawablePadding="12dp"
+        android:drawableLeft="@drawable/vector_lock"
+        android:hint="@string/hint_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
+
+    <Button
+        android:layout_marginLeft="12dp"
+        android:layout_marginRight="12dp"
+        android:background="@color/colorPrimary"
+        android:text="@string/button_login"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
     </LinearLayout>
