--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,26 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
-    android:orientation="vertical">
+    android:background="@android:color/white">
 
 
     <ImageView
-        android:layout_gravity="center"
+        android:id="@+id/ivLoginLogo"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
         android:layout_width="160dp"
         android:layout_height="120dp"
         android:src="@drawable/logo"/>
     <EditText
+        android:id="@+id/etLoginUsername"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
         android:layout_margin="12dp"
         android:drawablePadding="12dp"
+        android:layout_below="@+id/ivLoginLogo"
         android:drawableLeft="@drawable/vector_person"
         android:hint="@string/hint_usuario"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"/>
 
     <EditText
+        android:layout_below="@+id/etLoginUsername"
         android:layout_margin="12dp"
         android:drawablePadding="12dp"
         android:drawableLeft="@drawable/vector_lock"
@@ -28,17 +34,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
-    <Space
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1" />
-
     <Button
-        android:layout_marginLeft="12dp"
-        android:layout_marginRight="12dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="12dp"
         android:background="@color/colorPrimary"
         android:text="@string/button_login"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"/>
 
-    </LinearLayout>
+    </RelativeLayout>
