--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,8 +7,13 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="AppTheme.Red" parent="AppTheme">
+        <item name="android:background">@color/red</item>
+    </style>
+
     <style name="AppTheme.EditTextStyle" parent="AppTheme">
         <item name="android:textSize">16sp</item>
         <item name="android:drawablePadding">12dp</item>
+        <item name="android:layout_margin">@dimen/margin_default</item>
     </style>
 </resources>
